--- a/agecalculator/src/app/globals.css
+++ b/agecalculator/src/app/globals.css
@@ -2,26 +2,100 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+ .age{
+text-align: center;
+justify-content: center;
+
+ }
+
+ .form{
+  padding: 50px;
+  margin: auto;
+  align-items: center;
+ display:flex ;
+ flex-direction: column;
+ width: 60%;
+ }
+ .navigation{
+   position: relative;
+   width: 400px;
+   height: 70px;
+   /* background-color: #585555; */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 10px;
+ }
+ .navigation ul{
+   display: flex;
+   width: 350px;
+ }
+ 
+ .button{
+  
+  border-radius: 4px;
+  border: 1px solid black;
+  width: 100%;
+ }
+.result ,p{
+  justify-content: center;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+ input{
+  border-radius: 4px;
+  border: 1px solid black;
+  width: 100%;
+ }
+ .button:hover{
+  /* background-color: #444141;
+  */
+ }
+ .navigation ul li{
+   position: relative;
+  list-style: none;
+  width: 70px;
+  height: 70px;
+  z-index: 1;
+ }
+ .navstyle{
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   width: 100%;
+   text-align: center;
+   font-weight: 500;
+ }
+ .icon{
+   position: relative;
+   display: block;
+   line-height: 75px;
+   font-size: 1.5em;
+   text-align: center;
+   transition: 0.5s;
+   color: black;
+ }
+ .navigation ul li:hover .icon{
+  transform: translateY(-35px);
+ }
+ 
+ .navigation ul li .text{
+  position: absolute;
+  
+  font-weight: 400;
+  font-size: 0.75em;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+  opacity: 0;
+  transform: translateY(10px);
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+ 
+  .navigation ul li:hover  .text{
+   opacity: 1;
+   transform: translateY(10px);
+  }
+ 
